# 1nce-iot-c-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lexicon.txt  nceFilePaths.cmake  nceiotcsdkFilePaths.cmake  project.yml  west.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: ci.yml
docs/doxygen/: Doxyfile  pages.dox  style.dox  user_guide.dox
ports/zephyr/: CMakeLists.txt  Kconfig  coap_interface_zephyr.c  coap_interface_zephyr_utils.c  memfault_interface_zephyr.c  network_interface_zephyr.c  udp_interface_zephyr.c
ports/zephyr/include/: coap_interface_zephyr.h  coap_interface_zephyr_utils.h  memfault_interface_zephyr.h  network_interface_zephyr.h  udp_interface_zephyr.h
scripts/: west-commands.yml
scripts/west_commands/: quickstart.py
source/: nce_iot_c_sdk.c  nce_sdk.c
source/include/: nce_iot_c_sdk.h  nce_sdk.h
source/interface/: log_interface.h  tls_interface.h  udp_interface.h
test/: CMakeLists.txt  unit_test_sdk.c
test/unit-test/: CMakeLists.txt  nce_sdk_utest.c
tools/: uncrustify.cfg
tools/cmock/: coverage.cmake  create_test.cmake
zephyr/: CMakeLists.txt  Kconfig  module.yml
